build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ActualModuleHere"
version = "0.2.0"
authors = [
  { name="Jane Doe", email="jane.doe@example.com" },
]
description = "A package that contains utilities that data engineers use."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/myOrgHere/myRepoNameHere"
"Bug Tracker" = "https://github.com/myOrgHere/myRepoNameHere/issues"
